# azure-batch-load

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: check_reqs.yaml  ci.yaml  pypi.yaml
azurebatch/: download.py
azurebatchload/: __init__.py  checks.py  core.py  download.py  upload.py  utils.py
azurebatchload/tests/: test_utils.py
scripts/: check_setupcfg_and_requirementst_equal.py  generate_requirements_from_setup.py  generic.py
