[metadata]
name = azurebatchload
version = 0.5.1
author = Erfan Nariman
author_email = hello@zypp.io
description = Download files in batches from Azure Blob Storage Containers
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, azure, blob, download, batch
url = https://github.com/zypp-io/azure-batch-load
project_urls =
    Bug Tracker = https://github.com/zypp-io/azure-batch-load/issues
    Source = https://github.com/zypp-io/azure-batch-load
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
 = azurebatchload
packages = find:
python_requires = >=3.7

[options.packages.find]
where = azurebatchload

[flake8]
statistics = True
count = True
max-complexity=10
max-line-length=100
per-file-ignores=__init__.py: F401
