[metadata]
name = azurebatchload
version = 0.5.2
author = Erfan Nariman, Melvin Folkers
author_email = hello@zypp.io
description = Download files in batches from Azure Blob Storage Containers
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, azure, blob, download, batch
url = https://github.com/zypp-io/azure-batch-load
project_urls =
    Bug Tracker = https://github.com/zypp-io/azure-batch-load/issues
    Source = https://github.com/zypp-io/azure-batch-load
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = azurebatchload
python_requires = >=3.7
install_requires =
    azure-storage-blob~=12.8.0

[flake8]
statistics = True
count = True
max-complexity=12
max-line-length=120
per-file-ignores=__init__.py: F401
